# CAultron

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: workflow.yml
docs/: Analysis of CAultron110 Key Generation.md  spec 1 - Introduction.md  spec 10 - Attack Scenarios and Mitigations.md  spec 11 - Conclusion.md  spec 2 - Data Types and Structure.md  spec 3 - Seed Derivation.md  spec 4 - Entropy Injection.md  spec 5 - Universe Evolution.md  spec 6 - Key Derivation.md  spec 7 - Forward and Backward Secrecy.md  spec 8 - State Verification.md  spec 9 - Quantum Resistance.md
docs/specs/: spec 01 - Introduction.md  spec 02 - Data Types and Structure.md  spec 03 - Seed Derivation.md  spec 04 - Rule Space and Dynamic Rule Encoding.md  spec 05 - Universe Evolution.md  spec 06 - Key Derivation.md  spec 07 - Attack Scenarios and Mitigations.md  spec 09 - Possible Improvements.md  spec 10 - Conclusion.md
src/caultron/: __init__.py  __main__.py  ca.py  chacha20.py  visualize.py
tests/: test_chacha20.py  test_xor_blocks.py  test_xor_reduce.py
